Mnemosyne 2.3.3 : 

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

-Change ',' to ' - ' when importing legacy tag names (reported by Matthias 
 Ernst).



Mnemosyne 2.3.2 : 2015-02-25

-Option to merge databases (under File - Import - Mnemosyne 2.x *.db files).
-Make sure latex files are always pregenerated before sync (reported by Eric 
 Freeman).
-Fix error syncing filenames containing double dots (reported by Eric Freeman).
-Strip control characters from strings when exporting and syncing (reported 
 by Carl Kennedy).
-Smart sorting of card types in dialog boxes (patch by Emilian Mihalache).
-Fix when importing 1.x databases containing a single quote in a media filename
 (reported by Jan Egil Hagen).
-Don't replace newline with <br> inside textarea tags (patch by Pete 
 Kovalenko).
-Fix crash when running in headless mode after having run with the GUI 
 (reported by Chris Nadt).
-Fix handling of media filenames containing '#' (reported by Philip Gubser).
-Don't crash the SQL engine if you have more than 1000 tags (reported by Mats 
 Hansson).
-Fix regression in merging and editing duplicate cards (reported by Marcin M.).
-Update the window title on a sync server if a different database was loaded.
-Make upgrading from 2.3 config database more robust (reported by Lewis White).
-Better error handling when trying to load a database which no longer exists
 in its previous location.
-Make sure we can run on systems with PyQt5 installed (patch by Nuno Araujo).
-The "db_media:" tag now expands to an absolute path on all systems (reported
 by Gnome).
-The local timezone is now stored in the science logs. 


Mnemosyne 2.3.1 : 2014-06-18

-Change database backend for config file. There should be no more errors
 which cause you to delete the config file.
-Don't import cherrypy if not using the sync server (workaround for mimetype
 bug in non-unicode systems) (reported by Steven Lee, Pete Kovalenko).