@@ -1,9 +1,4 @@
-Cannot grade map cards
-
 mass convert to sentence type (Nadt)
-
-check making cards file from cards with multiple tags
-
 
 
 * archiving old log
